--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Bootstrap npm starter</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          </div>
+        </div>
+      </nav>
     <div class="col-md-8 py-5 px-3 mx-auto">
 
       <header class="pb-3 mb-5 border-bottom">
